--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "beautifulsoup4>=4.13.3",
     "pandas>=2.2.3",
     "pdfplumber>=0.11.6",
+    "pymysql>=1.1.1",
+    "python-dotenv>=1.1.0",
     "requests>=2.32.3",
 ]
 
