--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,17 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiomysql>=0.2.0",
     "beautifulsoup4>=4.13.3",
+    "databases>=0.9.0",
+    "fastapi[standard]>=0.115.12",
+    "mysql-connector-python>=9.2.0",
     "pandas>=2.2.3",
     "pdfplumber>=0.11.6",
     "pymysql>=1.1.1",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
+    "sqlalchemy>=2.0.40",
 ]
 
 [dependency-groups]
